--- a/tools-collection/ncm2mp3/frontend/package.json
+++ b/tools-collection/ncm2mp3/frontend/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "element-plus": "^2.3.7",
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
